# idc-sm-annotations-conversion

./: .gitignore  LICENSE  README.md  pyproject.toml
src/idc-annotation-conversion/: __main__.py
src/idc-path-annotations/: __main__.py
src/idc_annotation_conversion/: __main__.py  cloud_config.py  cloud_io.py  convert.py  git_utils.py  metadata_config.py  mp_utils.py
src/idc_annotation_conversion/catch/: __main__.py  metadata_config.py
src/idc_annotation_conversion/gbm_transcriptional_subtypes/: __main__.py  convert.py  metadata_config.py
src/idc_annotation_conversion/pan_cancer_nuclei_seg/: __main__.py  convert.py  metadata_config.py
src/idc_annotation_conversion/panoptils/: __main__.py  convert.py  metadata_config.py
src/idc_annotation_conversion/rms/: __main__.py  convert.py  metadata_config.py
src/idc_annotation_conversion/tcga_til_maps/: __main__.py  convert.py  metadata_config.py
src/tcga-annotation-conversion/: __main__.py  convert.py
