[tool.poetry]
name = "idc-annotation-conversion"
version = "0.1.0"
description = "Python code for converting TCGA annotations into DICOM format."
authors = ["Chris Bridge <cbridge@mgh.harvard.edu>"]
readme = "README.md"
packages = [{include = "idc_annotation_conversion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=2.0.0"
pydicom = "^3.0.1"
highdicom = { version = "^0.25.0", extras = ["libjpeg"] }
google-cloud-bigquery = "^3.6.0"
google-cloud-storage = "^2.7.0"
google-auth = "^2.16.2"
pandas = ">=2.0.0"
db-dtypes = "^1.0.5"
shapely = "^2.0.1"
click = "^8.1.3"
dicomweb-client = "^0.59.1"
oauthlib = "^3.2.2"
requests-oauthlib = "^1.3.1"
gitpython = "^3.1.31"
rasterio = "^1.3.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.1.1"
ipython = "^8.11.0"

[tool.poetry.scripts]
idc-annotation-conversion = "idc_annotation_conversion.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
